@@ -235,6 +235,9 @@
 	    <version>${mail.version}</version>
 	</dependency>
 	
+	
+	
+	
 </dependencies>
   <!-- springCloud -->
   	<dependencyManagement>
@@ -281,12 +284,6 @@
 			    <artifactId>shiro-spring</artifactId>
 			    <version>${shiro-spring.version}</version>
 		    </dependency>
-			<dependency>
-			    <groupId>org.apache.shiro</groupId>
-			    <artifactId>shiro-spring-boot-web-starter</artifactId>
-			    <version>${shiro-spring-boot-web-starter.version}</version>
-			</dependency>
-			
 			
 			<!-- 缓存相关 -->
 			<!-- JSR107  开发复杂性较大 -->
@@ -446,7 +443,8 @@
                 <feign.client.config.default.connect-timeout>90000</feign.client.config.default.connect-timeout>
                 <feign.client.config.default.read-timeout>90000</feign.client.config.default.read-timeout>
                 <!-- 日志 trace < debug < info < warn < error < fatal 默认级别为info，即默认打印info及其以上级别的日志-->
-                <logging.level>debug</logging.level>
+                <!--日志存放位置-->
+                <log.home>D:/dev/logs/questions</log.home>
                 <!-- 图片滑动验证码 图片路径 -->
                 <prefix.verificationImagePathPrefix>D:\\temp\\imgs\\</prefix.verificationImagePathPrefix>
                  <!-- wechat第三方接口相关参数配置 -->
@@ -512,7 +510,7 @@
                 <feign.client.config.default.connect-timeout>90000</feign.client.config.default.connect-timeout>
                 <feign.client.config.default.read-timeout>90000</feign.client.config.default.read-timeout>
                 <!-- 日志 trace < debug < info < warn < error < fatal 默认级别为info，即默认打印info及其以上级别的日志-->
-                <logging.level>debug</logging.level>
+                <log.home>D:/dev/logs/questions</log.home>
                 <!-- 图片滑动验证码 图片路径-->
                <prefix.verificationImagePathPrefix>D:\\temp\\imgs\\</prefix.verificationImagePathPrefix>
                 <!-- wechat第三方接口相关参数配置 -->
@@ -578,7 +576,7 @@
                 <feign.client.config.default.connect-timeout>90000</feign.client.config.default.connect-timeout>
                 <feign.client.config.default.read-timeout>90000</feign.client.config.default.read-timeout>
                 <!-- 日志 trace < debug < info < warn < error < fatal 默认级别为info，即默认打印info及其以上级别的日志-->
-                <logging.level>debug</logging.level>
+                <log.home>D:/dev/logs/questions</log.home>
                 <!-- 图片滑动验证码 图片路径-->
                <prefix.verificationImagePathPrefix>D:\\temp\\imgs\\</prefix.verificationImagePathPrefix>
                 <!-- wechat第三方接口相关参数配置 -->
@@ -640,10 +638,10 @@
                 <ribbon.ReadTimeout>90000</ribbon.ReadTimeout>
                 <ribbon.MaxAutoRetries>0</ribbon.MaxAutoRetries>
                 <ribbon.MaxAutoRetriesNextServer>0</ribbon.MaxAutoRetriesNextServer>
-                 <feign.client.config.default.connect-timeout>90000</feign.client.config.default.connect-timeout>
+                <feign.client.config.default.connect-timeout>90000</feign.client.config.default.connect-timeout>
                 <feign.client.config.default.read-timeout>90000</feign.client.config.default.read-timeout>
                 <!-- 日志 trace < debug < info < warn < error < fatal 默认级别为info，即默认打印info及其以上级别的日志-->
-                <logging.level>error</logging.level>
+                <log.home>D:/dev/logs/questions</log.home>
                 <!-- 图片滑动验证码 图片路径-->
                <prefix.verificationImagePathPrefix>/debug/itour/imgs/</prefix.verificationImagePathPrefix>
                 <!-- wechat第三方接口相关参数配置 -->
@@ -661,7 +659,8 @@
                 <docker.maintainer>wangtao wwangtaoc11@163.com</docker.maintainer>
                 <docker.imageTag>latest</docker.imageTag>
                 <docker.cmd>["java","-version"]</docker.cmd>
-                <docker.entryPoint>["java","-jar","-Xms64m","-Xmx128m","${project.build.finalName}.jar"]</docker.entryPoint>
+                <!-- -Xms64m  -Xmx128m  -Xmn32m  -Xss256k  -XX:SurvivorRatio=8  -XX:+UseConcMarkSweepGC -->
+                <docker.entryPoint>["java","-XX:MetaspaceSize=128m","-XX:MaxMetaspaceSize=56m","-Xms64m","-Xmx128m","-Xmn32m","-Xss256k","-XX:SurvivorRatio=8","-XX:+UseConcMarkSweepGC","-jar","${project.build.finalName}.jar"]</docker.entryPoint>
             </properties>
         </profile>
     </profiles>
